--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,21 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  drift: ^2.19.1
+  drift_dev: ^2.19.0
+  drift_flutter: ^0.1.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   go_router: ^14.2.1
+  path: ^1.9.0
+  path_provider: ^2.1.3
+  riverpod: ^2.5.1
   shared_preferences: ^2.2.3
   smooth_page_indicator: ^1.2.0
 
 dev_dependencies:
+  build_runner: ^2.4.11
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
