--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
   go_router: ^14.2.1
   path: ^1.9.0
   path_provider: ^2.1.3
